# LadybugVelodyneViewer

./: CMakeLists.txt  LadybugVelodyne.cpp  LadybugVelodyne.h  LadybugVelodyne.qrc  LadybugVelodyne.ui  README.md  ViewerWidget.cpp  ViewerWidget.h  main.cpp  panorama_fragment.glsl  panorama_vertex.glsl  points_fragment.glsl  points_vertex.glsl
calibrations/: velodyne.calib
shaders/: panorama_fragment.glsl  panorama_vertex.glsl  points_fragment.glsl  points_vertex.glsl
